<?xml version="1.0"?>
<package>
  <name>tracer_gazebo_sim</name>
  <version>0.0.3</version>
  <description>AgileX Tracer 2.0 Simulator bringup</description>

  <author email="ruixiang.du@westonrobot.com">Ruixiang Du</author>
  <maintainer email="ruixiang.du@westonrobot.com">Ruixiang Du</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/agilexrobotics</url>
  <url type="bugtracker">https://github.com/agilexrobotics/tracer_ros/issues</url>
  <url type="repository">https://github.com/agilexrobotics/tracer_ros</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>tracer_description</run_depend>
  <run_depend>rostopic</run_depend>

  <export>
  </export>
</package>
