<?xml version="1.0"?>
<package>
  <name>scout_msgs</name>
  <version>0.0.3</version>
  <description>Messages for AgileX Scout</description>

  <author email="ruixiang.du@westonrobot.com">Ruixiang Du</author>
  <maintainer email="support@agilex.ai">rdu</maintainer>
  <maintainer email="info@westonrobot.com">WestonRobot</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/agilexrobotics</url>
  <url type="bugtracker">https://github.com/agilexrobotics/scout_ros/issues</url>
  <url type="repository">https://github.com/agilexrobotics/scout_ros</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
