<?xml version="1.0"?>
<package>
  <name>tracer_msgs</name>
  <version>0.0.2</version>
  <description>Messages for AgileX Tracer</description>

  <author email="ruixiang.du@westonrobot.com">Ruixiang Du</author>
  <maintainer email="support@agilex.ai">rdu</maintainer>
  <maintainer email="info@westonrobot.com">WestonRobot</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/agilexrobotics</url>
  <url type="bugtracker">https://github.com/agilexrobotics/tracer_ros/issues</url>
  <url type="repository">https://github.com/agilexrobotics/tracer_ros</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
